tests/cases/compiler-development/artifact/errors/diagnostic-match-expression-type-mismatch.diagnostic
diagnostic error code=T0001 family=type message="type mismatch: expected i64, got bool" sources=1 labels=1 notes=0 helps=0
  Source source_id=0 kind=file path="tests/cases/match/errors/match-expression-type-mismatch.ari" display="tests/cases/match/errors/match-expression-type-mismatch.ari" bytes=165
  Label index=0 role=primary source_id=0 source="tests/cases/match/errors/match-expression-type-mismatch.ari" line=10 column=5 end_line=10 end_column=9 byte_start=143 byte_end=147 message=""
  Snippet label=0 text="  --> tests/cases/match/errors/match-expression-type-mismatch.ari:10:5\n    |\n 10 |     None => false;\n    |     ^^^^"
